--- a/about-us.html
+++ b/about-us.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hotel Management</title>
+    <title>Eagle Hotel</title>
     <link rel="stylesheet" href="css/main.css" />
+    <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <script type = "text/javascript" src="app.js"></script>
   </head>
   <body>
@@ -88,7 +89,7 @@
             <h2 class="title">Facilities</h2>
           <div class="service-div">
             <h3><i class="fa fa-check" aria-hidden="true"></i> Fine interior with royal finishing</h3>
-            <p>Riyasat has been designed by fusing past elements with the new, giving a Royal Dining experience.</p>
+            <p>Eagle has been designed by fusing past elements with the new, giving a Royal Dining experience.</p>
           </div>
           <div class="service-div">
             <h3><i class="fa fa-check" aria-hidden="true"></i> Complimentary Wi-Fi</h3>
@@ -100,7 +101,7 @@
           </div>
           <div class="service-div">
             <h3><i class="fa fa-check" aria-hidden="true"></i> Laundry Service</h3>
-            <p> Riyasat provides an in-house laundry service and caters from Washing, Ironing and can also commission Dry-Clean Requests.</p>
+            <p> Eagle provides an in-house laundry service and caters from Washing, Ironing and can also commission Dry-Clean Requests.</p>
           </div>
           <div class="service-div">
             <h3><i class="fa fa-check" aria-hidden="true"></i> Multi Cuisine Restaurant</h3>
