--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hotel Management</title>
+    <title>Eagle Hotel</title>
     <link rel="stylesheet" href="css/main.css" />
+    <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <script type = "text/javascript" src="app.js"></script>
   </head>
   <body>
     <div id="container">
@@ -20,8 +22,12 @@
           <li><a href="services.html">Services</a></li>
          <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
-          <div class="nav-top">
+          <div class="nav-top" id="notlogin">
             <a href="registration-login.html" class="btn">Register / Login</a>
+          </div>
+          
+          <div class="nav-top" id="login">
+              <a class="btn-user">Welcome<br> <span id="result1"></span></a> <a href="mypage.html" class="btn" >My Page</a>
           </div>
       </nav>
         </div>
@@ -120,7 +126,7 @@ OF LUXURY AND COMFORT.</h2>
           </div>
           <div class="col-form">
             <h1>Contact Us</h1>
-            <form method="post" action="#">
+            <form method="post" action="#" onSubmit="addcontactdata()">
               <label for="name">Name <font color="#fff">*</font></label>
               <input type="text" id="name" name="name" required>
               <label for="email">Email <font color="#fff">*</font></label>
@@ -128,8 +134,8 @@ OF LUXURY AND COMFORT.</h2>
               <label for="subject">Subject</label>
               <input type="text" id="subject" name="subject">
               <label>Message <font color="#fff">*</font></label>
-              <textarea required></textarea>
-              <input type="submit" value="Submit">
+               <textarea required id="message"></textarea>
+               <input type="submit" value="Submit" > 
             </form>
           </div>
       </div>
@@ -143,9 +149,9 @@ OF LUXURY AND COMFORT.</h2>
           </p>
         </div>
         <div class="footer-right">
-          <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-          <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-          <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            <a href="https://twitter.com/explore" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
         </div>
         <div class="clearfix"></div>
       </footer>
